--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ Podfile.lock
 /.DS_Store
 Podfile.lock
 /Podfile.lock
+
+*.xcuserstate  
+project.xcworkspace  
+xcuserdata  
+UserInterfaceState.xcuserstate  
+project.xcworkspace/  
+xcuserdata/  
+UserInterface.xcuserstate
