--- a/Root/Info.plist
+++ b/Root/Info.plist
@@ -8,8 +8,6 @@
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIcons</key>
-	<dict/>
 	<key>CFBundleIcons~ipad</key>
 	<dict/>
 	<key>CFBundleIdentifier</key>
@@ -31,6 +29,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>授权相机权限</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>授权相册权限</string>
 	<key>PHPhotoLibraryPreventAutomaticLimitedAccessAlert</key>
