--- a/Root/Info.plist
+++ b/Root/Info.plist
@@ -29,6 +29,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>授权定位权限</string>
 	<key>NSCameraUsageDescription</key>
 	<string>授权相机权限</string>
 	<key>NSPhotoLibraryUsageDescription</key>
