--- a/HelloSwift.xcodeproj/xcshareddata/xcschemes/HelloSwift.xcscheme
+++ b/HelloSwift.xcodeproj/xcshareddata/xcschemes/HelloSwift.xcscheme
@@ -50,6 +50,13 @@
             ReferencedContainer = "container:HelloSwift.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "IDEPreferLogStreaming"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Debug"
